@@ -1,5 +1,16 @@
 2008-03-07  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_draw.c: (murrine_draw_radiobutton),
+	(murrine_draw_checkbox):
+	* src/murrine_draw_rgba.c: (murrine_rgba_draw_radiobutton),
+	(murrine_rgba_draw_checkbox):
+	* src/murrine_style.c: (murrine_style_draw_option),
+	(murrine_style_draw_check):
+	* src/murrine_types.h:
+	Implemented inconsistent state for radiobutton
+
+2008-03-07  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* configure.ac:
 	* src/config.h.in:
 	* src/murrine_style.c: (murrine_widget_is_rgba),
